# pi_ui_render

./: .gitignore  Cargo.toml  README.md  build.rs  crates.text  crates1.txt  crates2.txt  document.md  home.md  out.frag  out.vert  pi_world.md  rustfmt.toml  system_schedule.dot  todo.md
build_pi_wasm/: build_wasm.js
document/: as_image重用功能.md
examples/: framework.rs
examples/a_cmd_play/: main.rs
examples/a_cmd_play/source/: run_config.txt
examples/a_html/: main.rs
examples/a_html/cases/: background_color.html  css.html  is_opacity_background_image.html  is_opacity_border_color.html  is_opacity_border_image.html
examples/animation/: main.rs
examples/as_image_indirtyrect/: main.rs
examples/as_image_innerdirty/: main.rs
examples/as_image_post_process/: main.rs
examples/as_image_transform_will_change/: main.rs
examples/as_image_url/: main.rs
examples/background_color/: main.rs
examples/background_compress_texture/: main.rs
examples/background_image/: main.rs
examples/background_image_radius/: main.rs
examples/blend_mode/: main.rs
examples/blur/: main.rs
examples/border_color/: main.rs
examples/border_image/: main.rs
examples/border_radius/: main.rs
examples/box_shadow/: main.rs
examples/buffer_ranges/: main.rs
examples/canvas/: main.rs
examples/clip_path/: main.rs
examples/cmd_play/: main.rs
examples/common_play/: main.rs
examples/fbo_overflow/: main.rs
examples/hsi/: main.rs
examples/mask_image/: main.rs
examples/opacity/: main.rs
examples/opacity_rotate/: main.rs
examples/overflow/: main.rs
examples/overflow_rotate/: main.rs
examples/performance/: main.rs
examples/performance_android/: main.rs
examples/quad/: main.rs
examples/quad_linear_gradient/: main.rs
examples/quad_radius/: main.rs
examples/radial_wave/: main.rs
examples/rotate_context/: main copy.rs  main.rs
examples/svg_sdf2/: main.rs
examples/test/: main copy.rs  main.rs
examples/test_setting/: main.rs
examples/text/: main.rs
examples/text_linear_gradient/: main.rs
examples/text_measure/: main.rs
examples/text_sdf/: main.rs
examples/text_sdf2/: main.rs
examples/text_shadow/: main.rs
examples/tow_root/: main.rs
examples/transform_willchange/: main.rs
examples/transform_willchange_fbo/: main.rs
examples/transition/: main.rs
examples/z_source/: 3675173.astc.ktx  ht.sdf  hwxw.sdf
exports_macro/: Cargo.toml
exports_macro/src/: lib.rs  style_macro.rs
macros/: Cargo.toml
macros/src/: lib.rs
resource/: color.frag  color.vert  color_shadow.frag  common.vert  image.frag  image.vert  shape_sdf.frag  shape_sdf.vert  test.glsl  text.frag  text.vert  ui_frag.glsl  ui_meterial.glsl  with_vert_color.frag
src/: events.rs  gui.rs  lib.rs  tools.rs
src/components/: calc.rs  draw_obj.rs  mod.rs  pass_2d.rs  root.rs  user.rs
src/devtools/: debug.rs  http_server.js  mod.rs  showbox.frag  showbox.vert  tools.rs
src/devtools/canvas_render/: mod.rs  pass.frag  pass.vert
src/devtools/web/: index.html
src/export/: json_parse.rs  mod.rs  native_debug.rs  native_index.rs  rr.rs  style.rs  wasm_debug.rs  wasm_index.rs
src/font/: brush_freetype.rs  font.rs  mod.rs  text_pack.rs  text_split.rs
src/resource/: animation_sheet.rs  cmd.rs  draw_obj.rs  fragment.rs  mod.rs
src/shader/: camera.glsl  camera.rs  color.frag  color.rs  color.vert  data.rs  depth.glsl  depth.rs  image.frag  image.rs  image.vert  meterial.glsl  meterial.rs  mod.rs  sdf.glsl  sdf.rs  text.frag  text.rs  text.vert  text_sdf.frag  text_sdf.rs  ui_meterial.glsl  ui_meterial.rs
src/shader1/: 1meterial.rs  1shader.frag  batch_gauss_blur.frag  batch_gauss_blur.rs  batch_gauss_blur.vert  batch_meterial.rs  batch_sdf_glow.frag  batch_sdf_glow.rs  batch_sdf_glow.vert  batch_sdf_gray.frag  batch_sdf_gray.rs  batch_sdf_gray.vert  batch_shader.frag  batch_shader.vert  batch_shader_fbo.frag  batch_shader_opacity.frag  batch_shader_opacity_fbo.frag  gup_arraybuffer.rs  meterial.rs  mod.rs  rect_sdf.frag  rect_sdf.vert  shader.frag  shader.vert  text_sdf2.rs  text_sdf3.frag
src/shaders/: color.rs  image.rs  mod.rs  text.rs
src/source/shader/: color.frag  color.glsl  color.vert  color_shadow.frag  color_shadow.vert  common.vert  image.frag  image.vert  post_process.frag  post_process.vert  text.frag  text.vert  with_vert_color.vert
src/system/: cmd_play.rs  debug.rs  mod.rs  res_load.rs  system_set.rs  utils.rs
src/system/base/: mod.rs
src/system/context/: context.rs  mod.rs  opacity.rs
src/system/draw_obj/: background_image.rs  blend_mode.rs  blur.rs  border_radius.rs  box_shadow.rs  calc_background_color.rs  calc_background_image.rs  calc_border_color.rs  calc_border_image.rs  calc_border_radius.rs  calc_box_shadow.rs  calc_canvas.rs  calc_pipeline.rs  clear_draw_obj.rs  context.rs  geo_split.rs  hsi.rs  image_texture_load.rs  life_drawobj.rs  mod.rs  opacity.rs  overflow.rs  pipeline.rs  root_clear_color.rs  root_view_port copy.rs  root_view_port.rs  sdf2_texture_update.rs  set_geo_uniform.rs  set_world_marix.rs  text.rs  tpl优化，编译.ini  transform_will_change.rs  world_marix.rs
src/system/handle_node/: content_box.rs  context.rs  context_blur.rs  context_hsi.rs  context_mask_texture.rs  context_opacity.rs  context_overflow.rs  context_root.rs  layout.rs  mod.rs  oct.rs  quad.rs  show.rs  style_setting.rs  text_glphy.rs  text_split.rs  z_index.rs  (+2 more)
src/utils/: cmd.rs  mod.rs  shader_helper.rs  stdcell.rs  tools.rs  vecmap_default.rs
style/: Cargo.toml
style/examples/style_parse/: main.rs
style/examples/style_parse/resource/compress_dwcss/psd/: combine_img.80.dwcss  combine_img.dwcss
style/examples/style_parse/resource/dwcss/app_a/: a.android.zh.dwcss  a.dwcss  a.web.zh.dwcss  c.dwcss
style/examples/style_parse/resource/dwcss/app_c/: combine.dwcss
style/examples/style_parse/resource/dwcss/pi_common/: combine.dwcss
style/examples/style_parse/resource/dwcss/psd/: combine_img.dwcss
style/examples/style_parse/resource/pi_demo_psd/: combine.dwcss
style/src/: lib.rs  style copy.rs  style.rs  style_parse.rs  style_type copy.rs  style_type.rs
(+415 files in other folders)
