[package]
name = "pi_ui_render"
version = "0.2.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = ["debug"]
wasm_bindgen = []
debug = []
trace=["bevy/trace_chrome", "pi_bevy_render_plugin/trace"]

[dependencies]
bitflags="1.2"
serde_json = "1.0"
pi_print_any= "0.1"
pi_slotmap = "0.1"
num-traits = "0.2.6"
fnv = "1.0.6"
lazy_static = "1.4"
paste = "1.0"
postcard = {version = "1.0", features = ["use-std"]}
serde = { version = "1.0", features = ["derive"]}
ordered-float = { version = "3.0", default-features = false, features = ["serde"] }
fxhash = "0.2.1"
nalgebra = {version = "0.32", features = ["serde", "serde-serialize"]}
parry2d = "0.13"
# ncollide2d = {version = "0.33", features = ["serde"]}
log="0.4"
smallvec={version = "1.8", features = ["serde"]}
bitvec={version = "1.0", features = ["serde"]}
cssparser = "0.29"
pi_hash="0.1" 
pi_atom={version="0.2", features = ["serde", "pointer_width_32"]}
pi_enum_default_macro="0.1"
pi_map="0.1"
pi_null="0.1"
pi_ucd="0.1"
pi_data_view = "0.1"
futures = "0.3"
pi_polygon = "0.1"
geo = "0.23"
pi_cg2d = "0.3"
crossbeam="0.8"
pi_graph = "0.1"
fixedbitset = {version="0.4", features = ["serde"]}
bytemuck = { version = "1.4", features = ["derive"] }
naga = { version = "0.11"}
pi_assets = "0.13"
image = "0.24"
polygon2 = "0.3"
json ="0.12"
# pi_idtree = { git = "https://github.com/GaiaWorld/pi_idtree.git" }
pi_slotmap_tree ="0.3"
pi_dirty="0.1"

# pi_flex_layout = { git = "https://github.com/GaiaWorld/pi_flex_layout.git" }
pi_flex_layout = "0.2"
pi_sparialtree = {git= "https://github.com/GaiaWorld/pi_spatial.git", package = "pi_spatial"}
# pi_ecs_macros = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
# pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_hal={git="https://github.com/GaiaWorld/pi_hal.git"}
# js_proxy_gen_macro={git="https://github.com/GaiaWorld/pi_lib.git"}
pi_postprocess={git="https://github.com/GaiaWorld/pi_post_process.git"}
pi_curves = { git="https://github.com/GaiaWorld/pi_curves.git"}
pi_animation = {git="https://github.com/GaiaWorld/pi_animation.git"}
render_derive = {git="https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader"}
pi_style = {git="https://github.com/GaiaWorld/pi_style.git"}
pi_densevec = "0.1.2"
pi_futures="0.1"
pi_time="0.3"
# siphasher = {version="0.3", features=["serde_no_std"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

winit = {git = "http://ser.yinengyun.com:10082/tech/winit.git"}
pi_bevy_post_process= {git="https://github.com/GaiaWorld/pi_render_bevy.git"}
pi_bevy_ecs_extend = {git="https://github.com/GaiaWorld/pi_render_bevy.git"}
pi_bevy_render_plugin = {git="https://github.com/GaiaWorld/pi_render_bevy.git"}
pi_bevy_asset = {git="https://github.com/GaiaWorld/pi_render_bevy.git"}
pi_bevy_winit_window = {git="https://github.com/GaiaWorld/pi_render_bevy.git"}
tracing = "0.1"
bevy = {version="0.10", default-features = false}
zerovec = "0.9"
guillotiere = { version = "0.6" }
derive-deref-rs = "0.1"
thiserror = "1.0"
wgpu = { version = "0.15", default-features = false, features = ["glsl"] }
pi-async-rt = "0.1"
pi_share = {version="0.4"}
pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader"}
# derive_deref = "1.1"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }


# flume = "0.10"
# [patch."https://github.com/GaiaWorld/pi_spatialtree"]
# pi_spatial ={path="../pi_spatial"}

# [patch."https://github.com/GaiaWorld/pi_post_process"]
# pi_postprocess ={path="../pi_post_process"}

# [patch."https://github.com/GaiaWorld/pi_curves"]
# pi_curves  = {path="../pi_curves"}

# [patch."https://github.com/GaiaWorld/pi_animation"]
# pi_animation = { path="../pi_animation"}

# [patch."https://github.com/GaiaWorld/pi_render"]
# pi_render = { path = "../pi_render" }
# render_derive = {path = "../pi_render/crates/render_derive"}

[patch."https://github.com/GaiaWorld/pi_render_bevy"]
pi_bevy_post_process= { path = "../pi_render_bevy/crates/post_process" }
pi_bevy_ecs_extend = { path = "../pi_render_bevy/crates/ecs_extend" }
pi_bevy_render_plugin = { path = "../pi_render_bevy/crates/render" }
pi_bevy_asset = { path = "../pi_render_bevy/crates/asset" }
pi_bevy_winit_window = { path = "../pi_render_bevy/crates/winit_window" } 
pi_bevy_log = { path = "../pi_render_bevy/crates/log" } 

# [patch."https://github.com/GaiaWorld/pi_hal"]
# pi_hal = { path = "../pi_hal" }

# [patch."https://github.com/GaiaWorld/pi_flex_layout"]
# pi_flex_layout = { path = "../pi_flex_layout" }

# [patch."http://ser.yinengyun.com:10082/tech/font_kit.git"]
# font_kit = { path = "../font_kit" }

# [patch."http://ser.yinengyun.com:10082/tech/winit.git"]
# winit = {path = "../winit"}
# [patch."https://github.com/GaiaWorld/pi_style.git"]
# pi_style = {path = "../pi_style"}

# [patch."http://ser.yinengyun.com:10082/tech/winit.git"]
# winit = {path = "../winit"}

# [patch.crates-io]
# pi_async_graph = { path = "../pi_async_graph" }
# pi_assets = { path = "../pi_assets" }
# bevy = { path = "../bevy" }
# pi_slotmap_tree = { path = "../pi_slotmap_tree" }
# pi_map = { path = "../pi_map" }
# pi_flex_layout = { path = "../pi_flex_layout" }
# pi_dirty={path = "../pi_dirty" }


# pi_assets = {path="../pi_assets"}
# pi_graph = {path = "../pi_graph"}
# wgpu = { path = "../wgpu-0.14.2/wgpu"}

# pi_slotmap = { path = "../pi_slotmap" }

# pi_dirty = { path = "../pi_dirty" }
# wgpu = { path = "../wgpu/wgpu" }


[[example]]
name = "quad"
test = true

[dev-dependencies]
env_logger = "0.9"
float-ord = "0.3"
async-trait="0.1"
font_kit = {git="http://ser.yinengyun.com:10082/tech/font_kit.git"}
spin_sleep="1.1"
num_cpus = "1.13"
bevy = {version="0.10", default-features = false, features=["bevy_winit"]}
timer = "0.2.0"
pi_bevy_log = {git="https://github.com/GaiaWorld/pi_render_bevy.git"}
# pi_export_gui = {path="../pi_export/crates/gui"}
# bevy_mod_debugdump = "0.6"
# bevy-inspector-egui="0.14"
# bevy_internal={version="0.9", features=["bevy_winit"]}
# bevy_internal={path="../bevy/crates/bevy_internal", features=["bevy_winit"]}

[build-dependencies]
render_compile = { git = "https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader" }
naga = { version = "0.11", features = [
    "glsl-in",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
] }




# tree = { path = "../pi_lib/tree"}
# slotmap = { path = "../pi_lib/slotmap"}
# slab = {path="../pi_lib/slab"}
# atom = {path="../pi_lib/atom"}
# map = {path="../pi_lib/map"}
# any = {path="../pi_lib/any"}
# listener = {path="../pi_lib/listener"}
# hash = {path="../pi_lib/hash"}
# time = {path="../pi_lib/time"}
# share = {path="../pi_lib/share"}
# wy_rng = {path="../pi_lib/wy_rng"}
# debug_info = {path="../pi_lib/debug_info"}
# graph = {path="../pi_lib/graph"}
# async_graph = {path="../pi_lib/async_graph"}
# async = {path="../pi_lib/async"}
# dirty = { path= "../pi_lib/dirty"}
# pi_ecs_macros = { path = "macros"}
# paste = "0.1"
# lazy_static = "*"
# log = "*"
# rand = "*"
# futures = "0.3"
# fixedbitset = "0.4"




# im = "*"

# [dependencies.web-sys]
# version = "*"
# features = [
# 	"console",
# ]
[net]
# git-fetch-with-cli = true
# offline = true

