[package]
name = "pi_ui_render"
version = "0.1.3"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"
description = "Renderer 2D UI with Bevy Ecs"
repository = "https://github.com/GaiaWorld/pi_bevy"
license = "MIT OR Apache-2.0"
keywords = ["pi", "bevy", "ecs", "ui"]

[lib]
crate-type = ["lib"]

[features]
wasm_bindgen = []
debug = []
trace=["debug", "bevy/trace_chrome", "pi_bevy_render_plugin/trace", "pi_bevy_log/tracing-chrome"]

[dependencies]
bitflags="1.2"
serde_json = "1.0"
pi_print_any= "0.1"
pi_slotmap = "0.1"
num-traits = "0.2.6"
fnv = "1.0.6"
lazy_static = "1.4"
paste = "1.0"
serde = { version = "1.0", features = ["derive"]}
ordered-float = { version = "3.0", default-features = false, features = ["serde"] }
fxhash = "0.2.1"
nalgebra = {version = "0.32", features = ["serde", "serde-serialize"]}
parry2d = "0.13"
# ncollide2d = {version = "0.33", features = ["serde"]}
log = {version = "0.4", features=["release_max_level_warn", "kv_unstable"]}
# tracing = {version = "0.1", features = ["release_max_level_warn"]}
smallvec={version = "1.8", features = ["serde"]}
bitvec={version = "1.0", features = ["serde"]}
cssparser = "0.29"
pi_hash="0.1" 
pi_atom={version="0.2", features = ["serde", "pointer_width_32"]}
pi_enum_default_macro="0.1"
pi_map="0.1"
pi_null="0.1"
pi_ucd="0.1"
pi_data_view = "0.1"
futures = "0.3"
pi_polygon = "0.1"
geo = "0.26"
pi_cg2d = "0.3"
crossbeam="0.8"
fixedbitset = {version="0.4", features = ["serde"]}
bytemuck = { version = "1.4", features = ["derive"] }
naga = { version = "0.12"}
pi_assets = "0.13"
image = "0.24"
polygon2 = "0.3"
pi_slotmap_tree ="0.3"
pi_dirty="0.1"

pi_flex_layout = "0.2"
pi_spatial = "0.4"
pi_hal = {version = "0.1", registry = "yn"}
pi_postprocess = {version = "0.1", registry = "yn"}
pi_curves = {version = "0.1", registry = "yn"}
pi_animation = {version = "0.1", registry = "yn"}
render_derive = {version = "0.1", registry = "yn"}
pi_style = {version = "0.1", registry = "yn"}
pi_densevec = "0.1"
pi_futures="0.1"
pi_time="0.3"
# siphasher = {version="0.3", features=["serde_no_std"]}
# wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

pi_bevy_post_process= {version = "0.1", registry = "yn"}
pi_bevy_ecs_extend = {version = "0.1", registry = "yn"}
pi_bevy_render_plugin = {version = "0.1", registry = "yn"}
pi_bevy_asset = {version = "0.1", registry = "yn"}
bevy = {version="0.11", default-features = false}
# zerovec = "0.9"
guillotiere = { version = "0.6" }
derive-deref-rs = "0.1"
thiserror = "1.0"
wgpu = { version = "0.16", default-features = false, features = ["glsl"] }
pi-async-rt = "0.1"
pi_share = {version="0.4"}
pi_render = {version = "0.1", registry = "yn"}
# derive_deref = "1.1"
tracing-subscriber = "0.3"

# flume = "0.10"


[patch.crates-io]
# pi_graph = { path = "../pi_graph" }
# pi_async_graph = { path = "../pi_async_graph" }
# geo = { path = "../geo/geo" }
# pi_assets = { path = "../pi_assets" }
bevy = { path = "../bevy" }
# pi_slotmap_tree = { path = "../pi_slotmap_tree" }
# pi_map = { path = "../pi_map" }
# pi_flex_layout = { path = "../pi_flex_layout" }
# pi_dirty={path = "../pi_dirty" }
# pi_hal = { path="../pi_hal"}
# pi_spatial = { path="../pi_spatial" }



[patch.yn]
# pi_curves  = {path="../pi_curves"}
# pi_animation = { path="../pi_animation"}
# pi_style = {path = "../pi_style"}
# winit = {path = "../winit"}
# font_kit = { path = "../font_kit" }

# bevy
# pi_bevy_ecs_extend = { path = "../pi_bevy/crates/ecs_extend" }
# pi_bevy_render_plugin = { path = "../pi_bevy/crates/render" }
# pi_bevy_asset = { path = "../pi_bevy/crates/asset" }
# pi_bevy_winit_window = { path = "../pi_bevy/crates/winit_window" } 
# pi_bevy_log = { path = "../pi_bevy/crates/log" } 
# pi_bevy_ecs_macro = { path = "../pi_bevy/crates/ecs_extend/macro"}
# pi_bevy_post_process= { path = "../pi_bevy/crates/post_process" }

# pi_render
# pi_render = { path = "../pi_render" }
# render_core = {path = "../pi_render/crates/render_core"}
# render_derive = {path = "../pi_render/crates/render_derive"}

# pi_assets = {path="../pi_assets"}
# pi_graph = {path = "../pi_graph"}
# wgpu = { path = "../wgpu-0.14.2/wgpu"}

# pi_slotmap = { path = "../pi_slotmap" }

# pi_dirty = { path = "../pi_dirty" }
# wgpu = { path = "../wgpu/wgpu" }


[[example]]
name = "quad"
test = true

[dev-dependencies]
env_logger = "0.9"
float-ord = "0.3"
async-trait="0.1"
font_kit = { registry = "yn", version = "0.1" }
spin_sleep="1.1"
num_cpus = "1.13"
bevy = {version="0.11", default-features = false, features=["bevy_winit"]}
timer = "0.2.0"
pi_bevy_log = {version ="0.1", registry = "yn"}
criterion = { version = "0.3", features = ["html_reports"] }
pi_winit = {version = "0.27", registry="yn", package="winit"}
pi_ui_render = {path = "./", features = ["debug"]}
tracing = "0.1"
postcard = {version = "1.0", features = ["use-std"]}
flame = "0.2"
# pi_export_gui = {path="../pi_export/crates/gui"}
# bevy_mod_debugdump = "0.6"
# bevy-inspector-egui="0.14"
# bevy_internal={version="0.9", features=["bevy_winit"]}
# bevy_internal={path="../bevy/crates/bevy_internal", features=["bevy_winit"]}

[build-dependencies]
render_compile = {version = "0.1", registry = "yn"}




# tree = { path = "../pi_lib/tree"}
# slotmap = { path = "../pi_lib/slotmap"}
# slab = {path="../pi_lib/slab"}
# atom = {path="../pi_lib/atom"}
# map = {path="../pi_lib/map"}
# any = {path="../pi_lib/any"}
# listener = {path="../pi_lib/listener"}
# hash = {path="../pi_lib/hash"}
# time = {path="../pi_lib/time"}
# share = {path="../pi_lib/share"}
# wy_rng = {path="../pi_lib/wy_rng"}
# debug_info = {path="../pi_lib/debug_info"}
# graph = {path="../pi_lib/graph"}
# async_graph = {path="../pi_lib/async_graph"}
# async = {path="../pi_lib/async"}
# dirty = { path= "../pi_lib/dirty"}
# pi_ecs_macros = { path = "macros"}
# paste = "0.1"
# lazy_static = "*"
# log = "*"
# rand = "*"
# futures = "0.3"
# fixedbitset = "0.4"

[profile.release]
debug= true


# im = "*"

# [dependencies.web-sys]
# version = "*"
# features = [
# 	"console",
# ]
[net]
# git-fetch-with-cli = true
# offline = true

