[package]
name = "pi_style"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"

[dependencies]
num-traits = "0.2.6"
bincode = "1.3"
smallvec={version = "1.8", features = ["serde"]}
bitvec={version = "1.0", features = ["serde"]}
ordered-float = { version = "3.0", default-features = false, features = ["serde"] }
nalgebra = {version = "0.24.0", features = ["serde", "serde-serialize"]}
ncollide2d = {version = "0.27.0", features = ["serde"]}
derive_deref = "1.1"
serde = { version = "1.0", features = ["derive"], option=true }
cssparser = "0.29"
log="0.4"
paste = "0.1"
lazy_static = "1.4"
pi_slotmap = "0.1"
pi_share="0.4"
pi_atom={version="0.2", features = ["serde"]}
pi_enum_default_macro="0.1"
pi_hash="0.1"
# pi_flex_layout = { git = "https://github.com/GaiaWorld/pi_flex_layout.git" }
pi_flex_layout = { path = "../../pi_flex_layout" }
pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }

pi_print_any="0.1"

[dev-dependencies]
env_logger = "0.9"
